--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
     </head>
     <body>
-		<p>hello world</p>
+		<h1>My faves</h1>
+        <p>Welcome to my site. Click one of the links below to expand your horizons.</p>
+        <ul>
+            <li><a href="/food.html" target="_blank">food</a></li>
+        </ul>
     </body>
 </html>
