--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<h1>My faves</h1>
         <p>Welcome to my site. Click one of the links below to expand your horizons.</p>
         <ul>
-            <li><a href="/food.html" target="_blank">food</a></li>
+            <li><a href="cooking.html" target="_blank">cooking</a></li>
         </ul>
     </body>
 </html>
